--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vue3 Mouse Practice Project: Composables</title>
+  <title>Composables | Vue3 Mouse Practice Project</title>
   <script src="https://unpkg.com/vue@3.0.0/dist/vue.global.js"></script>
   <style>
     #app {
