--- a/scoped-slots.html
+++ b/scoped-slots.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mixins | Vue3 Mouse Practice Project</title>
+  <title>Scoped Slots | Vue3 Mouse Practice Project</title>
   <script src="https://unpkg.com/vue@3.0.0/dist/vue.global.js"></script>
   <style>
     #app {
@@ -18,7 +18,7 @@
 
 <body>
   <div id="app"></div>
-  <script src="js/mixins.js"></script>
+  <script src="js/scoped-slots.js"></script>
 </body>
 
 </html>
